[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/ghost.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 0.199999, -5.96046e-007 )
scale = Vector2( 0.241, 0.241 )
texture = ExtResource( 3 )

[node name="TimeLabel" type="Label" parent="."]
margin_left = 0.291985
margin_right = 44.292
margin_bottom = 16.0
text = "Time : "
align = 1
valign = 1

[node name="PointLabel" type="Label" parent="."]
margin_left = -0.291992
margin_top = 16.0
margin_right = 39.708
margin_bottom = 32.0
text = "Point : "
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
